--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth'
 
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    //Glid
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
 
 
 }
