--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,7 @@ dependencies {
     //Glid
     implementation 'com.github.bumptech.glide:glide:4.14.2'
 
+    //for progress animation json
+    implementation 'com.airbnb.android:lottie:3.4.0'
 
 }
